--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body style="padding-top: 15px;">
     <img src="httpsPixel.png" style="width:50px;height:50px;border-radius: 10px;">
     <div style="padding-top: 15px;">
-        <button id="dark" class="btn btn-outline-transparent">toggle dark mode</button>
+        <button id="dark" class="btn btn-outline-transparent">dark mode</button>
+        <button id="dark" class="btn btn-outline-transparent">color mode</button>
+
     </div>
     <img/>
     <h1>ihttps.eth</h1>
