--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="httpsPixel.png" style="width:50px;height:50px;border-radius: 10px;">
     <div style="padding-top: 15px;">
         <button id="dark" class="btn btn-outline-transparent">dark mode</button>
-        <button id="dark" class="btn btn-outline-transparent">color mode</button>
+        <button id="color-button" class="btn btn-outline-transparent">color mode</button>
 
     </div>
     <img/>
