--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="https.css">
 </head>
 <body style="padding-top: 15px;">
-    <img src="httpsPixel.png" style="width:50px;height:50px;border-radius: 10px;">
+    <img class="pfp" style="cursor: pointer;" >
     <div style="padding-top: 15px;">
         <button id="dark" class="btn btn-outline-transparent">dark mode</button>
         <button id="color-button" class="btn btn-outline-transparent">color mode</button>
-
+    </div>
+    <div style="padding-top: 10px;">
+        <button id="text-color-button" class="btn btn-outline-transparent">text color</button>
     </div>
     <img/>
     <h1>ihttps.eth</h1>
