--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https.css">
 </head>
 <body style="padding-top: 15px;">
-    <img class="pfp" style="cursor: pointer;" >
+    <img class="pfp">
     <div style="padding-top: 15px;">
         <button id="dark" class="btn btn-outline-transparent">dark mode</button>
         <button id="color-button" class="btn btn-outline-transparent">color mode</button>
