--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="https.css">
 </head>
 <body style="padding-top: 15px;">
-    <img class="pfp">
+    <div>
+        <button id="speed-down" class="btn btn-outline-transparent">-</button>
+        <img class="pfp"> 
+        <button id="speed-up" class="btn btn-outline-transparent">+</button>
+    </div>
     <div style="padding-top: 15px;">
         <button id="dark" class="btn btn-outline-transparent">dark mode</button>
         <button id="color-button" class="btn btn-outline-transparent">color mode</button>
