--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             </div>
         </article>
     </div> 
+    <div class="footer">
+        <div class="el x">
+<img class="pfp-footer" style="padding-top: 1px;">
+        </div>
+        
+    </div>
+    
 <script src="https.js"></script>
 </body>
 </html>
