--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,6 +24,16 @@
     </div>
     <img/>
     <h1>ihttps.eth</h1>
+    <div class="left-footer">
+        <div class="ely y">
+            <img class="pfp-footer" style="padding-top: 1px;">
+        </div>
+    </div>
+    <div class="right-footer">
+        <div class="ely y">
+            <img class="pfp-footer" style="padding-top: 1px;">
+        </div>
+    </div>
     <div class="cards">
         <article class="card">
             <div class="content">
@@ -61,11 +70,9 @@
     </div> 
     <div class="footer">
         <div class="el x">
-<img class="pfp-footer" style="padding-top: 1px;">
+            <img class="pfp-footer" style="padding-top: 1px;">
         </div>
-        
     </div>
-    
 <script src="https.js"></script>
 </body>
 </html>
