--- a/index.html
+++ b/index.html
@@ -47,20 +47,18 @@
                 Thank you for your time,
                 <br>
                 ihttps.eth
-                <br>
-                <br>
-                <br>
-                <a>email: https.acc1@gmail.com</a>                
-                <br>
-                <a href="https://twitter.com/_ihttps" target="_blank" rel="noopener noreferrer">twitter: @_ihttps</a>
-                <br>
-                <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer">github: 0xhttps</a>
             </div>
         </article>
     </div> 
+    <div class="footer2">
+        <a href="https://twitter.com/_ihttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
+        <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-twitter"></a>
+    </div>
     <div class="footer">
         <div class="el x">
             <img class="pfp-footer" style="padding-top: 1px;">
+
+            <img>
         </div>
     </div>
 <script src="https.js"></script>
