--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </article>
     </div> 
     <div class="footer2">
-        <a href="https://twitter.com/_ihttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
-        <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-twitter"></a>
+        <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
+        <a href="https://twitter.com/_ihttps" target="_blank" rel="noopener noreferrer"><img class="footer2-twitter"></a>
     </div>
     <div class="footer">
         <div class="el x">
