--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ihttps.eth</title>
+    <title>https</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https.css">
@@ -23,36 +23,23 @@
         <button id="text-color-button" class="btn btn-outline-transparent">text color</button>
     </div>
     <img/>
-    <h1>ihttps.eth</h1>
+    <h1>stuff</h1>
     <div class="cards">
         <article class="card">
             <div class="content">
-                {*tab*} Hello, my name is ihttps.eth and you're probably wondering why you are here. 
-                I'm guessing you have clicked a link somewhere, unless you somehow stumbled upon this beautiful site randomly. 
-                Regardless, I'm glad you're here. 
-                <br>
-                <br>
-                {*tab*} I started making this site when I realized how dog shit I was with html and css, hoping this would help.
-                Surely you can tell I haven't made any progress. Below, you will find some other horrible things I have made.
-                Please feel free to shoot me a dm/email (I don't know why you would), but I'm always interested in wasting my time.
-                <br>
-                <br>
-                {*tab*} I will continue adding to this site when I get bored, or come up with any ideas.
-                Please give me ideas. Maybe that is what you could email me about. Anyways, that is enough rambling. 
-                If you are confused why you are seeing {*tab*} everywhere, it is because when I would place a normal tab, it would not do anything, and I'm too lazy to make it look normal.
-                Now I think this looks cool, in a dumb (but cool) way. 
-                <br>
-                <br>
-                <br>
-                Thank you for your time,
-                <br>
-                ihttps.eth
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
         </article>
-    </div> 
+    </div>
     <div class="footer2">
         <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
-        <a href="https://twitter.com/_ihttps" target="_blank" rel="noopener noreferrer"><img class="footer2-twitter"></a>
     </div>
     <div class="footer">
         <div class="el x">
