--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https.css">
 </head>
-<body style="padding-top: 15px;">
+<body>
+
+    <!--header stuff-->
+    <div class="header">
+        <button id="dark" class="btn btn-outline-transparent">
+            <img class="header-img-dark">
+        </button>
+        <button id="color-button" class="btn btn-outline-transparent">
+            <img class="header-img-color">
+        </button>
+        <button id="text-color-button" class="btn btn-outline-transparent">
+            <img class="header-img-text">
+        </button>
+    </div>
+    <!--end of header stuff-->
+
+    <!--page icon and speed buttons-->
     <div>
         <button id="speed-down" class="btn btn-outline-transparent">-</button>
         <img class="pfp"> 
         <button id="speed-up" class="btn btn-outline-transparent">+</button>
     </div>
-    <div style="padding-top: 15px;">
-        <button id="dark" class="btn btn-outline-transparent">dark mode</button>
-        <button id="color-button" class="btn btn-outline-transparent">color mode</button>
-    </div>
-    <div style="padding-top: 10px;">
-        <button id="text-color-button" class="btn btn-outline-transparent">text color</button>
-    </div>
-    <img/>
-    <h1>stuff</h1>
+    <!--end of page icon and speed buttons-->
+
+    <h1>title</h1>
     <div class="cards">
         <article class="card">
             <div class="content">
@@ -38,16 +48,22 @@
             </div>
         </article>
     </div>
+
+    <!--start of footer icons-->
     <div class="footer2">
         <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
     </div>
+    <!--end of footer-->
+
+    <!--start of moving footer img-->
     <div class="footer">
         <div class="el x">
             <img class="pfp-footer" style="padding-top: 1px;">
-
             <img>
         </div>
     </div>
+    <!--end of moving footer img-->
+
 <script src="https.js"></script>
 </body>
 </html>
