--- a/index.html
+++ b/index.html
@@ -13,20 +13,14 @@
 
     <!--header stuff-->
     <div class="header">
-        <button id="dark" class="btn btn-outline-transparent">
-            <img class="header-img-dark">
-        </button>
-        <button id="color-button" class="btn btn-outline-transparent">
-            <img class="header-img-color">
-        </button>
-        <button id="text-color-button" class="btn btn-outline-transparent">
-            <img class="header-img-text">
-        </button>
+        <img id="dark" class="header-img-dark">
+        <img id="color-button" class="header-img-color">
+        <img id="text-color-button" class="header-img-text">
     </div>
     <!--end of header stuff-->
 
     <!--page icon and speed buttons-->
-    <div>
+    <div style="padding-top: 1%;">
         <button id="speed-down" class="btn btn-outline-transparent">-</button>
         <img class="pfp"> 
         <button id="speed-up" class="btn btn-outline-transparent">+</button>
