--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <!--end of page icon and speed buttons-->
 
+    <!--title and contents (paragraph or whatever)-->
     <h1>title</h1>
     <div class="cards">
         <article class="card">
@@ -42,6 +43,7 @@
             </div>
         </article>
     </div>
+    <!--end of contents-->
 
     <!--start of footer icons-->
     <div class="footer2">
