--- a/index.html
+++ b/index.html
@@ -40,14 +40,30 @@
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                 aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+                <!--start of email form-->
+                <div class="form-popup" id="myForm">
+                    <form action="https://formsubmit.co/https.acc1@gmail.com" class="form-container" method="POST">
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="https://0xhttps.github.io/thanks.html">
+                        <input type="email" name="email" placeholder="Email Address" required>
+                        <input type="text" name="name" placeholder="Name" required>
+                        <input type="text" placeholder="Your message here :)" required>
+                        <button type="submit" class="btn send">Send</button>
+                        <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+                    </form>
+                </div>
+                <!--End of email form-->
+
             </div>
         </article>
     </div>
     <!--end of contents-->
 
-    <!--start of footer icons-->
+    <!--start of footer icons / email icon-->
     <div class="footer2">
         <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
+        <img class="footer2-email" onclick="openForm()">
     </div>
     <!--end of footer-->
 
