--- a/thanks.html
+++ b/thanks.html
@@ -11,12 +11,14 @@
     <link rel="stylesheet" href="https.css">
 </head>
 <body>
-<h1>I will get back to you as soon as I can.
-    <br>
-    <br>
-    Thanks!
-</h1>
-<a href="https://0xhttps.github.io/index.html" target="_self" rel="noopener noreferrer">
-    <h3>Click here to return</h3>
-</a>
+    <main style="padding-top: 15%;">
+        <h1>I will get back to you as soon as I can.
+        <br>
+        <br>
+        Thanks!
+        </h1>
+    </main>
+    <a href="https://0xhttps.github.io/index.html" target="_self" rel="noopener noreferrer">
+        <h3>Click here to return</h3>
+    </a>
 </body>
