--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://0xhttps.github.io/thanks.html">
                         <input type="email" name="email" placeholder="Email Address" required>
-                        <input type="text" name="name" placeholder="Name">
+                        <input type="text" name="name" placeholder="Name" required>
                         <textarea type="text" placeholder="Your message here :)" required></textarea>
                         <button type="submit" class="btn send">Send</button>
                         <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
