--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <input type="hidden" name="_next" value="https://0xhttps.github.io/thanks.html">
                         <input type="email" name="email" placeholder="Email Address" required>
                         <input type="text" name="name" placeholder="Name" required>
-                        <textarea type="text" placeholder="Your message here :)" required></textarea>
+                        <textarea type="text" placeholder="Your message here :)" required style="resize: none; overflow: auto; width: 100%;" rows="7" ></textarea>
                         <button type="submit" class="btn send">Send</button>
                         <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
                     </form>
