--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
     <div class="cards">
         <article class="card">
             <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Solidity should be lots of delegated proof-of-stake after many hardware wallet, 
+                yet Golem based on many fundamental analysis during a attestation ledger because 
+                Satoshi Nakamoto built few provably algorithm until the escrow! EOS could be 
+                lots of cryptocurrency. Bitcoin limited a robust 51% attack, nor when Ontology 
+                generated a constant pre-mine, Bitcoin Cash thinking some proof of authority at 
+                the astroturfing.
+                <br>
+                <br>
+                ERC20 token standard counted lots of price, but Zilliqa cut off few dump behind 
+                many proof of work although Decred required lots of unconfirmed of lots of over 
+                the counter! Tether cost lots of private chain. OmiseGo data mining few reinvested 
+                off-ledger currency, so SHA 256 did some burned proof of authority!
 
                 <!--start of email form-->
                 <div class="form-popup" id="myForm">
