--- a/index.html
+++ b/index.html
@@ -25,23 +25,22 @@
     <!--end of page icon and speed buttons-->
 
     <!--title and contents (paragraph or whatever)-->
-    <h1>title</h1>
+    <h1>*title*</h1>
     <div class="cards">
         <article class="card">
             <div class="content">
-                Solidity should be lots of delegated proof-of-stake after many hardware wallet, 
-                yet Golem based on many fundamental analysis during a attestation ledger because 
-                Satoshi Nakamoto built few provably algorithm until the escrow! EOS could be 
-                lots of cryptocurrency. Bitcoin limited a robust 51% attack, nor when Ontology 
-                generated a constant pre-mine, Bitcoin Cash thinking some proof of authority at 
-                the astroturfing.
-                <br>
-                <br>
-                ERC20 token standard counted lots of price, but Zilliqa cut off few dump behind 
-                many proof of work although Decred required lots of unconfirmed of lots of over 
-                the counter! Tether cost lots of private chain. OmiseGo data mining few reinvested 
-                off-ledger currency, so SHA 256 did some burned proof of authority!
-
+            id venenatis a condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+            turpis egestas sed tempus urna et pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna eget est lorem
+            ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et netus et malesuada
+            fames ac turpis egestas integer eget aliquet nibh praesent tristique magna sit amet purus gravida quis blandit turpis
+            cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc congue nisi vitae
+            suscipit tellus mauris a diam maecenas sed enim ut sem viverra aliquet eget sit amet tellus cras adipiscing enim eu
+            turpis egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris ultrices eros in cursus turpis massa
+            tincidunt dui ut ornare lectus sit amet est placerat in egestas erat imperdiet sed euismod nisi porta lorem mollis
+            aliquam ut porttitor leo a diam sollicitudin tempor id eu nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit
+            amet risus nullam eget felis eget nunc lobortis mattis aliquam faucibus purus in massa tempor nec feugiat nisl pretium
+            fusce id velit ut tortor pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse
+            sed nisi lacus sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper
                 <!--start of email form-->
                 <div class="form-popup" id="myForm">
                     <form action="https://formsubmit.co/https.acc1@gmail.com" class="form-container" method="POST">
