--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>https</title>
+    <title>tab</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https.css">
@@ -12,6 +12,7 @@
 <body>
 
     <!--header stuff-->
+    <!--simple header... love these icons but might make my own.-->
     <div class="header" style="padding-top:1%;padding-right: 1%;">
         <img id="dark" class="header-img-dark">
         <img id="color-button" class="header-img-color" onclick="togglePageColor()">
@@ -19,17 +20,18 @@
     <!--end of header stuff-->
 
     <!--page icon and speed buttons-->
+    <!--this now changes speed of footer img spin. might get rid of this.-->
     <div style="padding-top: 1%;">
         <img class="pfp" onclick="toggleSpinSpeed()"> 
     </div>
     <!--end of page icon and speed buttons-->
 
     <!--title and contents (paragraph or whatever)-->
-    <h1>*title*</h1>
-    <div class="cards">
+    <h1>title</h1>
+    <div class="cards" style="padding-bottom: 14%;">
         <article class="card">
             <div class="content">
-            id venenatis a condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+            {tab}Id venenatis a condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
             turpis egestas sed tempus urna et pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna eget est lorem
             ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et netus et malesuada
             fames ac turpis egestas integer eget aliquet nibh praesent tristique magna sit amet purus gravida quis blandit turpis
@@ -41,14 +43,16 @@
             amet risus nullam eget felis eget nunc lobortis mattis aliquam faucibus purus in massa tempor nec feugiat nisl pretium
             fusce id velit ut tortor pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse
             sed nisi lacus sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper
+
                 <!--start of email form-->
+                <!--need to edit this form to fit the site better/ change colors with the buttons :)-->
                 <div class="form-popup" id="myForm">
                     <form action="https://formsubmit.co/https.acc1@gmail.com" class="form-container" method="POST">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://0xhttps.github.io/thanks.html">
                         <input type="email" name="email" placeholder="Email Address" required>
                         <input type="text" name="name" placeholder="Name" required>
-                        <textarea type="text" placeholder="Your message here :)" required style="resize: none; overflow: auto; width: 100%;" rows="7" ></textarea>
+                        <textarea type="text" placeholder="Email contents here" required style="resize: none; overflow: auto; width: 100%;" rows="7" ></textarea>         
                         <button type="submit" class="btn send">Send</button>
                         <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
                     </form>
@@ -61,6 +65,7 @@
     <!--end of contents-->
 
     <!--start of footer icons / email icon-->
+    <!--love these footer icons. might make my own? will come back to this. also need to add more-->
     <div class="footer2">
         <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
         <img class="footer2-email" onclick="openForm()">
@@ -68,7 +73,8 @@
     <!--end of footer-->
 
     <!--start of moving footer img-->
-    <div class="footer" style="padding-bottom: 6px;">
+    <!--maybe make it bounce around? don't want it to get in the way of reading but funny lol-->
+    <div class="footer">
         <div class="el x">
             <img class="pfp-footer">
             <img>
