fixed color toggles on web3.html

--- a/web3.html
+++ b/web3.html
@@ -30,7 +30,7 @@
 
     <!--title and contents (paragraph or whatever)-->
     <h1>web3 stuffs</h1>
-        <Button onclick="getWallet()" class="connect-wallet">
+        <Button onclick="getWallet()" class="btn btn-outline-transparent" style="border-color: white;color: white;">
             Connect Wallet
         </Button>
 
