--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <div class="footer2">
         <a href="https://github.com/0xhttps" target="_blank" rel="noopener noreferrer"><img class="footer2-github"></a>
         <img class="footer2-email" onclick="openForm()">
+        <a href="https://www.lensfrens.xyz/ihttps.lens" target="_blank" rel="noopener noreferrer"><img class="footer2-lens"></a>
         <a href="https://0xhttps.github.io/web3.html" target="_self" rel="noopener noreferrer"><img class="footer2-web3"></a>
         <!--replace link above to https://0xhttps.github.io/web3.html-->
         <!--replace link above to http://127.0.0.1:5500/web3.html when testing-->
